# yggdrasil

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.sh
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
backend/: Dockerfile  database.py  entrypoint.sh  main.py  models.py  requirements.txt
backend/routers/: __init__.py  backup.py  chat.py  events.py  families.py  map.py  mcp.py  media.py  nav.py  people.py  places.py  upload.py
backend/schemas/: __init__.py  backup.py  media.py  people.py
backend/services/: __init__.py  gedcom.py  geocoding.py  storage.py  text_extraction.py
backend/utils/: __init__.py  helpers.py
docs/: api-reference.md  gedcom-family-structure.md  postgres-schema.md  ui-improvements.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: Birth.js  BulkMediaUpload.js  Burial.js  Chat.js  Death.js  EventDetail.js  Families.js  FamilyDetail.js  Map.js  Marriage.js  MediaDetail.js  MediaList.js  MediaUpload.js  People.js  PersonForm.js  PersonProfile.js  PlaceDetail.js  Places.js  PrevNextNav.js  SearchableMultiSelect.js  Toast.js  Tree.css  (+2 more)
gedom-samples/: Kennedy.ged
scripts/: README.md  export_gedcom.py  extract_text_from_media.py  get_media_list.py  get_people.py  get_person_details.py  update_media.py  upload_gedcom.py  upload_media.py  upload_media_to_event.py  upload_media_with_tags.py
tests/: sample.ged  test_api.py  test_gedcom.py  test_upload.py
